Configure maven-surefire-plugin to enable dynamic agent loading